# bevy_splashscreen

./: Cargo.toml  README.md
src/: lib.rs  splash_screen_plugin.rs
src/components/: mod.rs  splash_screen_image.rs  splash_screen_tag.rs
src/resources/: mod.rs  splash_screen_configuration.rs  splash_screen_images.rs
src/state/: mod.rs  splash_screen_state.rs
src/systems/: mod.rs  on_enter.rs  on_exit.rs  update_splash_screen.rs
