[package]
name = "bevy_splashscreen"
version = "0.1.0"
edition = "2021"
description = "A simple splash screen plugin for Bevy"

[features]
default = ["progress_tracking"]
progress_tracking = ["bevy_asset_loader/progress_tracking", "dep:bevy_progress"]

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_asset", "bevy_sprite"]

[dependencies.bevy_tweening]
git = "https://github.com/ka-de/bevy_tweening"

[dependencies.bevy_asset_loader]
# Bevy plugin for asset loading
git = "https://github.com/ka-de/bevy_asset_loader"
default-features = false
features = ["2d", "standard_dynamic_assets"]

[dependencies.bevy_progress]
git = "https://github.com/ka-de/bevy_progress"
optional = true
